--- a/main.css
+++ b/main.css
@@ -1,27 +1,52 @@
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
 body {
-	display: flex;
-	flex-direction: column;
 	color: #A0A0A0;
 	background-color: black;
-}
-
-div {
-	display: flex;
-	flex-direction: inherit;
+	font-family: Helvetica;
+	font-size: 0.8em;
 }
 
 input {
-	display: flex;
-}
-
-video {
-	display: flex;
-	width: 100%;
-	overflow: none;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #A0A0A0;
+	border-radius: 0px;
+	color: #A0A0A0;
+	background-color: black;
+	box-sizing: border-box;
 }
 
 #header {
-	flex-direction: row;
+	position: absolute;
+	width:100%;
+	height: 30px;
+	z-index: 1;
+	display: none;
 }
 
 #share {
@@ -29,36 +54,53 @@ video {
 }
 
 #content {
-	flex-direction: row;
-	max-height: 100%;
+	display: flex;
 }
 
 #chat {
-	width: 200px;
+	width: 0px;
+	right: 0px;
+	height: 100%;
+	position: absolute;
 	flex-direction: column;
+	display: none;
+}
+
+#chat.ready {
+	width: 200px;
+	transition-duration: 0.6s;
+	transition-property: width;
 }
 
 #chat > div {
 	display: block;
-	flex-grow: 1;
+	color: white;
+}
+
+.old {
+	color: #A0A0A0;
+	transition-property: color;
+	transition-duration: 2s;
+}
+
+.log {
+	font-style: italic;
 }
 
 #chat-container {
-	/*max-height: 100%;*/
+	height: calc(100% - 20px);
 	overflow-y: auto;
 }
+
 #videoContainer {
-	flex-direction: column;
-	flex-grow: 1;
-}
-#videoPlayer {
-	flex-grow: 1;
+	width: calc(100% - 200px);
 }
 
-#text-input {
+#videoPlayer {
 	width: 100%;
 }
 
-.vertical {
-	flex
+#chat-input {
+	width: 100%;
+	height: 20px;
 }
